# qubichw

./: .gitignore  README.md  pyproject.toml  setup.py
pystudio/: __init__.py  acquisition.py  communication.py  dispatcher_id.py  frontend.py  sequence.py  tparameterstable.py
pystudio/scripts/: do_DACoffset_measurement.py  do_IV_sequence.py  do_NEP_sequence.py  do_SQUID_sequence.py  do_Vbias_optimisation_sequence.py  do_assign_default_DACoffsetTables.py  do_assign_saved_DACoffsetTables.py  do_constant_elevation_scanning.py  do_end_observation.py  do_init_frontend.py  do_init_mount.py  do_park_frontend.py  do_set_observation_mode.py  do_skydip_sequence.py  do_skydips_Vbias.py  do_start_acquisition.py  do_start_observation.py  get_frontend_settings.py  get_frontend_status.py
qubichk/: __init__.py  copy_data.py  dome.py  entropy_hk.py  hk_broadcast.py  hk_file_tools.py  hk_verify.py  hklist.py  horn_monitor.py  hwp.py  imacrt.py  mech_openclose.py  obsmount.py  obsmount_cortex.py  pfeiffer.py  platform.py  powersupply.py  qubic_bot.py  send_telegram.py  temperature_hk.py  ups.py  usbthermometer_hk.py  utilities.py
qubichk/scripts/: archive-data.sh  calsource2fits.py  calsource_commander.py  calsource_hourly_save.py  calsource_off  calsource_on  calsource_set_frequency.py  calsource_step_frequency.py  cf_commander.py  compressor2off  compressor_commander.py  compressor_log.sh  compressorstatus  compressorstatus.py  copy2cc.py  copy2jupyter.py  copydata  energenie_commander.py  fast_mmr.py  fpga_off  fpga_on  goto_el  goto_pos.py  heaterson  hk_ok.py  hornoff  housekeeping_list.txt  hwpoff  kellypi_off  kellypi_on  lampoff.py  make_hk_fits.py  mech_openclose.py  merge_hk.py  mmr_mes1.py  mount_entropy.sh  mountplc_acquisition.py  qubic_poweroff  qubic_poweron  run_MCP9808_broadcast.py  (+31 more)
qubichw/: __init__.py  amplifier.py  amplifier_dummy.py  amplifier_femto.py  arduino.py  calibration_source.py  calsource_configuration_manager.py  cf_configuration_manager.py  compressor.py  energenie.py  heater.py  modulator.py  modulator_siglent.py  modulator_tg5012a.py  multimeter.py  read_MCP9808_thermometer.py  read_calsource.py  read_gps.py  read_usbthermometer.py  redpitaya.py  relay.py  utilities.py
scripts/: archive-data.sh  calsource2fits.py  calsource_commander.py  calsource_hourly_save.py  calsource_set_frequency.py  calsource_step_frequency.py  central_command.py  clean-hk.sh  compressor1off  compressor1on  compressor1reset  compressor2on  compressor2reset  compressor_commander.py  compressor_log.py  compressor_log.sh  compressorstatus.py  configfile_backup.sh  copy2cc  copy2cc.py  copy2central.py  copy2jupyter.py  do_IV_sequence.py  do_NEP_sequence.py  do_SQUID_sequence.py  do_skydip_sequence.py  energenie_commander.py  fast_mmr.py  fpga_off  fpga_on  goto_az  goto_el  goto_pos.py  heatersoff  heaterson  hk_ok.py  hornoff  hornon  hwpoff  hwpon  (+44 more)
