[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "qubichw"
version = "2.0.0"
authors = [
  { name="Steve Torchinsky", email="satorchi@apc.in2p3.fr" },
]
description = "Utilities for QUBIC hardware control and monitoring"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/satorchi/qubichw"

[tool.hatch.build.targets.wheel]
packages = ["qubichk","qubichw","pystudio"]


[project.scripts]
"calsource_commander.py" = "scripts:calsource_commander.py"
"cf_commander.py" = "scripts:cf_commander.py"
"run_calibration_source.py" = "scripts:run_calibration_source.py"
"powersupply.py" = "qubichk:powersupply.py"
"make_hk_fits.py" = "scripts:make_hk_fits.py"
"modulator_commander.py" = "scripts:modulator_commander.py"
"run_bot.py" = "scripts:run_bot.py"
"run_hkserver.py" = "scripts:run_hkserver.py"
"calsource2fits.py" = "scripts:calsource2fits.py"
"run_horn_monitor.py" = "scripts:run_horn_monitor.py"
"plot_hornswitch.py" = "scripts:plot_hornswitch.py"
"calsource_hourly_save.py" = "scripts:calsource_hourly_save.py"
"read_calsource.py" = "qubichw:read_calsource.py"
"start_calsource_acq.sh" = "scripts:start_calsource_acq.sh"
"start_calsource_manager.sh" = "scripts:start_calsource_manager.sh"
"start_cf_manager.sh" = "scripts:start_cf_manager.sh"
"start_bot.sh" = "scripts:start_bot.sh"
"start_hkserver.sh" = "scripts:start_hkserver.sh"
"mmr_mes1.py" = "scripts:mmr_mes1.py"
"lampon.py" = "scripts:lampon.py"
"lampoff.py" = "scripts:lampoff.py"
"qubic_poweron" = "scripts:qubic_poweron"
"qubic_poweroff" = "scripts:qubic_poweroff"
"hwpon" = "scripts:hwpon"
"hwpoff" = "scripts:hwpoff"
"hornon" = "scripts:hornon"
"hornoff" = "scripts:hornoff"
"thermoson" = "scripts:thermoson"
"thermosoff" = "scripts:thermosoff"
"heaterson" = "scripts:heaterson"
"heatersoff" = "scripts:heatersoff"
"hk_ok.py" = "scripts:hk_ok.py"
"compressor_commander.py" = "scripts:compressor_commander.py"
"compressor1on" = "scripts:compressor1on"
"compressor1off" = "scripts:compressor1off"
"compressor2on" = "scripts:compressor2on"
"compressor2off" = "scripts:compressor2off"
"compressorstatus" = "scripts:compressorstatus"
"compressorstatus.py" = "scripts:compressorstatus.py"
"compressor1reset" = "scripts:compressor1reset"
"compressor2reset" = "scripts:compressor2reset"
"compressor_log.py" = "scripts:compressor_log.py"
"central_command.py" = "scripts:central_command.py"
"ups_alarm.py" = "scripts:ups_alarm.py"
"ups_log.py" = "scripts:ups_log.py"
"calsource_on" = "scripts:calsource_on"
"calsource_off" = "scripts:calsource_off"
"show_hk.py" = "scripts:show_hk.py"
"show_hk" = "scripts:show_hk"
"show_position.py" = "scripts:show_position.py"
"stop_mount.py" = "scripts:stop_mount.py"
"start_apctunnel.sh" = "scripts:start_apctunnel.sh"
"start_cctunnel.sh" = "scripts:start_cctunnel.sh"
"configfile_backup.sh" = "scripts:configfile_backup.sh"
"test_alarm.py" = "scripts:test_alarm.py"
"copydata" = "scripts:copydata"
"mount_entropy.sh" = "scripts:mount_entropy.sh"
"weather.py" = "scripts:weather.py"
"start_weather.sh" = "scripts:start_weather.sh"
"mech_openclose.py" = "scripts:mech_openclose.py"
"kellypi_on" = "scripts:kellypi_on"
"kellypi_off" = "scripts:kellypi_off"
"fpga_on" = "scripts:fpga_on"
"fpga_off" = "scripts:fpga_off"
"energenie_commander.py" = "scripts:energenie_commander.py"
"read_usbthermometer.py" = "qubichw:read_usbthermometer.py"
"start_usbthermometer_acq.sh" = "scripts:start_usbthermometer_acq.sh"
"run_gps_acquisition.py" = "scripts:run_gps_acquisition.py"
"run_gps_broadcast.py" = "scripts:run_gps_broadcast.py"
"start_gps_acquisition.sh" = "scripts:start_gps_acquisition.sh"
"start_gps_broadcast.sh" = "scripts:start_gps_broadcast.sh"
"start_ups.sh" = "scripts:start_ups.sh"
"run_MCP9808_acquisition.py" = "scripts:run_MCP9808_acquisition.py"
"run_MCP9808_broadcast.py" = "scripts:run_MCP9808_broadcast.py"
"start_MCP9808_acquisition.sh" = "scripts:start_MCP9808_acquisition.sh"
"start_MCP9808_broadcast.sh" = "scripts:start_MCP9808_broadcast.sh"
"run_heater_manager.py" = "scripts:run_heater_manager.py"
"start_heater_manager.sh" = "scripts:start_heater_manager.sh"
"goto_pos.py" = "scripts:goto_pos.py"
"goto_az" = "scripts:goto_az"
"goto_el" = "scripts:goto_el"
"kill_all_fridge_cycles.py" = "scripts:kill_all_fridge_cycles.py"
"send_telegram_to_subscribers.py" = "scripts:send_telegram_to_subscribers.py"
"do_skydip_sequence.py" = "scripts:do_skydip_sequence.py"
"do_IV_sequence.py" = "scripts:do_IV_sequence.py"
"do_NEP_sequence.py" = "scripts:do_NEP_sequence.py"
"do_SQUID_sequence.py" = "scripts:do_SQUID_sequence.py"
"archive-data.sh" = "scripts:archive-data.sh"
"clean-hk.sh" = "scripts:clean-hk.sh"
"start_gpsd-ntpd.sh" = "scripts:start_gpsd-ntpd.sh"
