[build-system]
# requires = ["hatchling >= 1.26"]
# build-backend = "hatchling.build"
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qubichw"
version = "2.0.0"
authors = [
  { name="Steve Torchinsky", email="satorchi@apc.in2p3.fr" },
]
description = "Utilities for QUBIC hardware control and monitoring"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/satorchi/qubichw"

# These are bash scripts
[tool.setuptools]
packages = ["qubichk","qubichw","pystudio"]
script-files = ["qubichk/scripts/start_calsource_acq.sh",
                "qubichk/scripts/start_calsource_manager.sh",
                "qubichk/scripts/start_cf_manager.sh",
                "qubichk/scripts/start_bot.sh",
                "qubichk/scripts/start_hkserver.sh",
                "qubichk/scripts/qubic_poweron",
                "qubichk/scripts/qubic_poweroff",
                "qubichk/scripts/hwpon",
                "qubichk/scripts/hwpoff",
                "qubichk/scripts/hornon",
                "qubichk/scripts/hornoff",
                "qubichk/scripts/thermoson",
                "qubichk/scripts/thermosoff",
                "qubichk/scripts/heaterson",
                "qubichk/scripts/heatersoff",
                "qubichk/scripts/compressor1on",
                "qubichk/scripts/compressor1off",
                "qubichk/scripts/compressor2on",
                "qubichk/scripts/compressor2off",
                "qubichk/scripts/compressorstatus",
                "qubichk/scripts/compressor1reset",
                "qubichk/scripts/compressor2reset",
                "qubichk/scripts/calsource_commander.py",
                "qubichk/scripts/cf_commander.py",
                "qubichk/powersupply.py",
                "qubichk/scripts/run_bot.py",
                "qubichk/scripts/run_hkserver.py",
                "qubichk/scripts/calsource2fits.py",
                "qubichk/scripts/run_horn_monitor.py",
                "qubichk/scripts/plot_hornswitch.py",
                "qubichk/scripts/calsource_hourly_save.py",
                "qubichw/read_calsource.py",
                "qubichk/scripts/mmr_mes1.py",
                "qubichk/scripts/hk_ok.py",
                "qubichk/scripts/compressor_commander.py",
                "qubichk/scripts/compressor_log.py",
                "qubichk/scripts/central_command.py",
                "qubichk/scripts/ups_alarm.py",
                "qubichk/scripts/ups_log.py",
                "qubichk/scripts/calsource_on",
                "qubichk/scripts/calsource_off",
                "qubichk/scripts/show_hk.py",
                "qubichk/scripts/show_hk",
                "qubichk/scripts/show_position.py",
                "qubichk/scripts/stop_mount.py",
                "qubichk/scripts/mountplc_acquisition.py",		
                "qubichk/scripts/start_apctunnel.sh",
                "qubichk/scripts/start_cctunnel.sh",
                "qubichk/scripts/configfile_backup.sh",
                "qubichk/scripts/test_alarm.py",
                "qubichk/scripts/copydata",
                "qubichk/scripts/mount_entropy.sh",
                "qubichk/scripts/weather.py",
                "qubichk/scripts/start_weather.sh",
                "qubichk/scripts/mech_openclose.py",
                "qubichk/scripts/kellypi_on",
                "qubichk/scripts/kellypi_off",
                "qubichk/scripts/fpga_on",
                "qubichk/scripts/fpga_off",
                "qubichk/scripts/energenie_commander.py",
                "qubichw/read_usbthermometer.py",
                "qubichk/scripts/start_usbthermometer_acq.sh",
                "qubichk/scripts/run_gps_acquisition.py",
                "qubichk/scripts/run_gps_broadcast.py",
                "qubichk/scripts/start_gps_acquisition.sh",
                "qubichk/scripts/start_gps_broadcast.sh",
                "qubichk/scripts/start_ups.sh",
                "qubichk/scripts/run_MCP9808_acquisition.py",
                "qubichk/scripts/run_MCP9808_broadcast.py",
                "qubichk/scripts/start_MCP9808_acquisition.sh",
                "qubichk/scripts/start_MCP9808_broadcast.sh",
                "qubichk/scripts/run_heater_manager.py",
                "qubichk/scripts/start_heater_manager.sh",
                "qubichk/scripts/goto_pos.py",
                "qubichk/scripts/goto_az",
                "qubichk/scripts/goto_el",
                "qubichk/scripts/kill_all_fridge_cycles.py",
                "qubichk/scripts/send_telegram_to_subscribers.py",
                "pystudio/scripts/do_skydip_sequence.py",
                "pystudio/scripts/do_IV_sequence.py",
                "pystudio/scripts/do_NEP_sequence.py",
                "pystudio/scripts/do_SQUID_sequence.py",
                "pystudio/scripts/do_init_frontend.py",
                "pystudio/scripts/get_frontend_settings.py",
                "qubichk/scripts/archive-data.sh",
                "qubichk/scripts/clean-hk.sh",
                "qubichk/scripts/start_gpsd-ntpd.sh"]
                
# These are python executable scripts using hatch, but all the scripts have to be modified to have a "main" function like cli() or whatever
# [project.scripts]
# "calsource_commander.py" = "qubichk.scripts.calsource_commander:cli"
# "cf_commander.py" = "qubichk.scripts.cf_commander:cli"
# "powersupply.py" = "qubichk.powersupply:cli"
# "run_bot.py" = "qubichk.scripts.run_bot:cli"
# "run_hkserver.py" = "qubichk.scripts.run_hkserver:hkserver"
# "calsource2fits.py" = "qubichk.scripts.calsource2fits:cli"
# "compressor_commander.py" = "qubichk.scripts.compressor_commander:cli"
# "show_hk.py" = "qubichk.scripts.show_hk:list_hk"
# "show_hk" = "qubichk.scripts:show_hk"
# "do_IV_sequence" = "pystudio.scripts.do_IV_sequence:cli"
# "do_NEP_sequence" = "pystudio.scripts.do_NEP_sequence:cli"
# "do_SQUID_sequence" = "pystudio.scripts.do_SQUID_sequence:cli"
# "do_init_frontend" = "pystudio.scripts.do_init_frontend:cli"
